refactor modal, add logo and typography scss files, add focus for logo

--- a/src/html/components/blocks/modals/_modal-template.html
+++ b/src/html/components/blocks/modals/_modal-template.html
@@ -12,13 +12,13 @@
 
         @if(typeof tabs !== 'undefined' && tabs === 'true') {
         <div class="form__tabs">
-            <div class="form__tab">
+            <div>
                 <input class="form__hidden" type="radio" name="order" id="@id-project" checked>
                 <label class="form__box" for="@id-project">
                     Бесплатный 3D дизайн-проект
                 </label>
             </div>
-            <div class="form__tab">
+            <div>
                 <input class="form__hidden" type="radio" name="order" id="@id-design">
                 <label class="form__box" for="@id-design">
                     Бесплатный вызов дизайнера
