--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -1,5 +1,7 @@
 // Ui
+@import '../components/ui/logo';
 @import '../components/ui/button';
+@import '../components/ui/typography';
 @import '../components/ui/swiper-elements';
 @import '../components/ui/tabs';
 @import '../components/ui/tooltip';
