--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -2,7 +2,7 @@
     <div class="overlay" data-menu-overlay aria-hidden></div>
     <nav class="header__navigation">
         <div class="header__wrapper-logo">
-            <a class="header__logo logo" href="#">
+            <a class="logo" href="#">
                 <img class="logo__img" src="img/logo.svg" alt="Логотип" width="155" height="28">
             </a>
         </div>
