add focus and hoover for home page

--- a/src/html/components/cards/_product-card.html
+++ b/src/html/components/cards/_product-card.html
@@ -37,7 +37,7 @@
                 <use xlink:href="img/sprite.svg#arrows-double">
             </svg>
         </a>
-        <button class="product-card__button button button--secondary" type="button">
+        <button class="product-card__button button button--secondary" data-graph-path="order-project" aria-controls="modal-order-project" type="button">
             Заказать проект
             <svg aria-hidden>
                 <use xlink:href="img/sprite.svg#arrows-double">
