--- a/src/html/components/cards/_review-card.html
+++ b/src/html/components/cards/_review-card.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <a class="review-card__link button button--decor" href="#" target="_blank">
-        <span class="button__text">Читать отзывы</span>
+        <span class="button__text">Перейти</span>
         <span class="button__decor" aria-hidden>
             <svg>
                 <use xlink:href="img/sprite.svg#arrows-double">
