--- a/src/styles/components/blocks/header/_header-transparent.scss
+++ b/src/styles/components/blocks/header/_header-transparent.scss
@@ -51,6 +51,14 @@
 					}
 				}
 
+				&:focus-visible {
+					.burger-button {
+						&__line {
+							color: var(--color-white);
+						}
+					}
+				}
+
 				&__plate {
 					background-color: var(--color-white);
 				}
