--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -14,5 +14,6 @@
 	--rgba-white-500: rgba(255, 255, 255, 0.5);
 	--rgba-black-500: rgba(0, 0, 0, 0.5);
 	--rgba-orange-800: rgba(250, 82, 61, 0.8);
+	--box-shadow-orange: 0 0 0 2px rgba(250, 82, 61, 0.8);
 	--font-main: 'Inter';
 }
