--- a/src/styles/components/blocks/_form.scss
+++ b/src/styles/components/blocks/_form.scss
@@ -57,10 +57,10 @@
 	}
 
 	&__box {
-		width: 100%;
 		display: inline-block;
 		border: 1px solid var(--color-grey-200);
 		padding: 35px;
+		width: 100%;
 		font-size: 14px;
 		text-align: center;
 
@@ -168,6 +168,23 @@
 
 	&__subtext {
 		flex: 1 0 40%;
+
+		a {
+			border-radius: 2px;
+			transition:
+				box-shadow 0.3s,
+				color 0.3s;
+
+			&:focus-visible {
+				@include focus-visible;
+			}
+
+			@media (any-hover: hover) {
+				&:hover {
+					color: var(--color-orange-400);
+				}
+			}
+		}
 	}
 
 	&__bottom {
