--- a/src/styles/components/blocks/header/_header-consultation.scss
+++ b/src/styles/components/blocks/header/_header-consultation.scss
@@ -6,7 +6,15 @@
 
 		transition:
 			color 0.3s,
-			border-bottom-color 0.3s;
+			border-bottom-color 0.3s,
+			box-shadow 0.3s,
+			border-radius 0.3s;
+
+		&:focus-visible {
+			@include focus-visible;
+
+			border-radius: 4px;
+		}
 
 		@include mq(sm) {
 			display: none;
