--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -12,7 +12,7 @@
 		content: '';
 		position: absolute;
 		left: 0;
-		bottom: 0;
+		bottom: -1px;
 		width: 100%;
 		height: 1px;
 		background-color: var(--color-grey-200);
@@ -107,6 +107,10 @@
 			&:hover {
 				background-color: var(--color-grey-300);
 			}
+		}
+
+		&:focus-visible {
+			@include focus-visible;
 		}
 
 		&--link {
