--- a/src/styles/components/blocks/header/_nav-menu.scss
+++ b/src/styles/components/blocks/header/_nav-menu.scss
@@ -29,12 +29,19 @@
 		}
 
 		a {
-			transition: color 0.3s;
+			border-radius: 4px;
+			transition:
+				color 0.3s,
+				box-shadow 0.3s;
 
 			@media (any-hover: hover) {
 				&:hover {
 					color: var(--color-dark-600);
 				}
+			}
+
+			&:focus-visible {
+				@include focus-visible;
 			}
 		}
 	}
