--- a/src/styles/components/blocks/header/burger/_burger-button.scss
+++ b/src/styles/components/blocks/header/burger/_burger-button.scss
@@ -27,7 +27,8 @@
 		transition:
 			border-color 0.3s,
 			background-color 0.3s,
-			left 0.3s;
+			left 0.3s,
+			box-shadow 0.3s;
 
 		@include mq(sm) {
 			width: 42px;
@@ -80,12 +81,17 @@
 		}
 	}
 
-	&:focus {
+	&:focus-visible {
 		.burger-button {
 			&__plate {
-				border-color: var(--color-orange-400);
+				@include focus-visible;
+
 				color: var(--color-dark-600);
 				background-color: transparent;
+			}
+
+			&__line {
+				color: var(--color-dark-600);
 			}
 		}
 	}
