--- a/src/styles/components/cards/_product-card.scss
+++ b/src/styles/components/cards/_product-card.scss
@@ -1,6 +1,7 @@
 .product-card {
 	display: flex;
 	flex-direction: column;
+	padding: 2px;
 	width: 100%;
 	height: 100%;
 
@@ -10,6 +11,29 @@
 		margin-bottom: 10px;
 		padding-bottom: 68%;
 		width: 100%;
+		transition: box-shadow 0.3s;
+
+		&::before {
+			content: '';
+			position: absolute;
+			inset: 0;
+			z-index: 2;
+			background-color: var(--color-black);
+			opacity: 0;
+			transition: opacity 0.3s;
+		}
+
+		&:focus-visible {
+			@include focus-visible;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				&::before {
+					opacity: 0.2;
+				}
+			}
+		}
 	}
 
 	picture {
@@ -53,6 +77,24 @@
 		}
 	}
 
+	&__title,
+	&__question {
+		border-radius: 4px;
+		transition:
+			color 0.3s,
+			box-shadow 0.3s;
+
+		&:focus-visible {
+			@include focus-visible;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--color-orange-400);
+			}
+		}
+	}
+
 	&__title {
 		&:not(:last-child) {
 			margin-bottom: 6px;
@@ -70,6 +112,12 @@
 
 	&__question {
 		@include question-button(5px);
+
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--color-dark-600);
+			}
+		}
 	}
 
 	&__info {
