--- a/src/styles/components/cards/_review-card.scss
+++ b/src/styles/components/cards/_review-card.scss
@@ -2,10 +2,21 @@
 	@include flex-simple(20px, column);
 
 	justify-content: space-between;
+	border: 1px solid transparent;
 	padding: 30px;
 	width: 100%;
 	height: 100%;
 	background-color: var(--color-white);
+	transition:
+		background-color 0.3s,
+		border-color 0.3s;
+
+	@media (any-hover: hover) {
+		&:hover {
+			border-color: var(--color-grey-400);
+			background-color: transparent;
+		}
+	}
 
 	@include mq(sm) {
 		padding: 20px;
@@ -74,5 +85,24 @@
 
 	&__link {
 		margin-top: auto;
+
+		&:focus-visible {
+			&::before {
+				border-color: var(--color-orange-400);
+			}
+
+			.button__decor {
+				border-color: transparent;
+				color: var(--color-white);
+				background-color: var(--color-orange-400);
+			}
+		}
+
+		&::before {
+			@include link-cover;
+
+			border: 2px solid transparent;
+			transition: border-color 0.3s;
+		}
 	}
 }
