--- a/src/styles/components/ui/_logo.scss
+++ b/src/styles/components/ui/_logo.scss
@@ -1,13 +1,13 @@
 .logo {
 	display: inline-block;
+	border-radius: 4px;
 	width: 100%;
 	height: 30px;
 	max-width: 172px;
+	transition: box-shadow 0.3s;
 
 	&:focus-visible {
-		outline: 0;
-		border-radius: 4px;
-		box-shadow: 0 0 0 2px var(--rgba-orange-800);
+		@include focus-visible;
 	}
 
 	@include mq(sm) {
