--- a/src/styles/pages/home-page/_blog-block.scss
+++ b/src/styles/pages/home-page/_blog-block.scss
@@ -97,17 +97,7 @@
 	}
 
 	&__buttons {
-		@include flex-simple(8px);
-
-		position: absolute;
-		right: 0;
-		top: 10px;
-		display: flex;
-		gap: 8px;
-
-		@include mq(md) {
-			display: none;
-		}
+		@include swiper-buttons;
 	}
 
 	&__button {
