--- a/src/styles/pages/home-page/_media.scss
+++ b/src/styles/pages/home-page/_media.scss
@@ -29,10 +29,26 @@
 	&__link {
 		@include flex-alignment(0);
 
+		border: 1px solid transparent;
 		padding: 12px;
 		width: 100%;
 		height: 100%;
 		background-color: var(--color-white);
+		transition:
+			background-color 0.3s,
+			border-color 0.3s,
+			box-shadow 0.3s;
+
+		&:focus-visible {
+			@include focus-visible;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				border-color: var(--color-grey-400);
+				background-color: transparent;
+			}
+		}
 	}
 
 	&__img {
