--- a/src/styles/templates/_spollers.scss
+++ b/src/styles/templates/_spollers.scss
@@ -16,13 +16,26 @@
 	&__button {
 		@include flex-alignment(10px, space-between);
 
+		border-radius: 4px;
 		width: 100%;
 		font-size: 18px;
 		line-height: 1.3;
 		text-align: left;
 		color: var(--color-dark-600);
-		transition: color 0.3s;
+		transition:
+			color 0.3s,
+			box-shadow 0.3s;
 		gap: 10px;
+
+		&:focus-visible {
+			@include focus-visible;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--color-orange-400);
+			}
+		}
 
 		@include mq(sm) {
 			font-size: 14px;
