--- a/src/html/components/blocks/_menu-mobile.html
+++ b/src/html/components/blocks/_menu-mobile.html
@@ -1,7 +1,7 @@
 <nav class="menu-mobile">
     <ul class="menu-mobile__items">
         <li class="menu-mobile__item">
-            <a class="menu-mobile__link" href="#">
+            <a class="menu-mobile__link menu-mobile__link--active" href="#">
                 <span class="menu-mobile__icon" aria-hidden>
                     <svg>
                         <use xlink:href="img/sprite.svg#burger">
@@ -31,14 +31,14 @@
             </a>
         </li>
         <li class="menu-mobile__item">
-            <a class="menu-mobile__link menu-mobile__link--dark" href="#">
+            <button class="menu-mobile__link menu-mobile__link--dark" data-graph-path="order-project" aria-controls="modal-order-project" type="button">
                 <span class="menu-mobile__icon" aria-hidden>
                     <svg>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </span>
                 Хочу проект
-            </a>
+            </button>
         </li>
     </ul>
 </nav>
