--- a/src/styles/components/blocks/_menu-mobile.scss
+++ b/src/styles/components/blocks/_menu-mobile.scss
@@ -27,9 +27,14 @@
 	&__link {
 		@include flex-alignment(2px, center, center, column);
 
+		border: 1px solid transparent;
 		padding: 13px;
+		width: 100%;
 		text-align: center;
 		color: var(--color-dark-600);
+		transition:
+			color 0.3s,
+			border-color 0.3s;
 
 		@include mq(sm) {
 			padding: 9px;
@@ -37,6 +42,19 @@
 			font-size: 10px;
 			line-height: 1.3;
 			letter-spacing: -0.04em;
+		}
+
+		&:focus-visible {
+			outline: 0;
+			border-color: var(--color-orange-400);
+		}
+
+		&--active {
+			color: var(--color-orange-400);
+
+			.menu-mobile__icon {
+				color: var(--color-orange-400);
+			}
 		}
 
 		&--dark {
@@ -57,6 +75,9 @@
 		width: 35px;
 		height: 35px;
 		background-color: var(--color-grey-100);
+		transition:
+			color 0.3s,
+			background-color 0.3s;
 
 		@include mq(sm) {
 			width: 27px;
