--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -13,6 +13,7 @@
 		position: absolute;
 		left: 0;
 		bottom: -1px;
+		z-index: 6;
 		width: 100%;
 		height: 1px;
 		background-color: var(--color-grey-200);
@@ -26,9 +27,9 @@
 	&--burger {
 		z-index: 2;
 
-		@include mq(lg) {
-			z-index: 22;
-		}
+		// @include mq(lg) {
+		// 	z-index: 22;
+		// }
 	}
 
 	@include mq(sm) {
