--- a/src/styles/components/ui/_button.scss
+++ b/src/styles/components/ui/_button.scss
@@ -10,7 +10,8 @@
 	transition:
 		background-color 0.3s,
 		color 0.3s,
-		box-shadow 0.3s;
+		box-shadow 0.3s,
+		border-color 0.3s;
 
 	&:focus-visible {
 		@include focus-visible;
