--- a/src/styles/mixins/_project.scss
+++ b/src/styles/mixins/_project.scss
@@ -4,7 +4,7 @@
 	padding-bottom: 5px;
 	transition: border-bottom-color 0.3s;
 
-	&:focus {
+	&:focus-visible {
 		border-bottom-color: var(--color-orange-400);
 	}
 
