--- a/src/styles/components/ui/_swiper-elements.scss
+++ b/src/styles/components/ui/_swiper-elements.scss
@@ -26,6 +26,19 @@
 	height: 6px;
 	background-color: var(--color-grey-300);
 	opacity: 1;
+	transition:
+		background-color 0.3s,
+		box-shadow 0.3s;
+
+	&:focus-visible {
+		@include focus-visible;
+	}
+
+	@media (any-hover: hover) {
+		&:hover {
+			background-color: var(--color-grey-500);
+		}
+	}
 }
 
 .swiper-pagination-bullet-active {
