--- a/src/styles/pages/catalog-page/_catalog.scss
+++ b/src/styles/pages/catalog-page/_catalog.scss
@@ -1,6 +1,8 @@
 .catalog {
 	@include container;
 
+	padding-bottom: 2px;
+
 	.filters {
 		margin-bottom: 40px;
 
@@ -35,8 +37,26 @@
 		@include flex-alignment(8px);
 
 		margin: 0 auto;
+		border-radius: 4px;
 		font-size: 16px;
 		color: var(--color-dark-600);
+		transition: box-shadow 0.3s;
+
+		&:focus-visible {
+			@include focus-visible;
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				span {
+					border-bottom-color: var(--color-dark-600);
+				}
+
+				svg {
+					color: var(--color-orange-400);
+				}
+			}
+		}
 
 		span {
 			@include link-border-bottom;
@@ -45,6 +65,7 @@
 		svg {
 			width: 14px;
 			height: 14px;
+			transition: color 0.3s;
 		}
 
 		@include mq(sm) {
