add focus and hover for product page, refactor height for fullscrean blocks, refactor burger-menu

--- a/src/html/components/blocks/_menu-mobile.html
+++ b/src/html/components/blocks/_menu-mobile.html
@@ -1,4 +1,4 @@
-<nav class="menu-mobile">
+<nav class="menu-mobile fixed-block">
     <ul class="menu-mobile__items">
         <li class="menu-mobile__item">
             <a class="menu-mobile__link menu-mobile__link--active" href="#">
