--- a/src/html/components/blocks/header/_burger-menu.html
+++ b/src/html/components/blocks/header/_burger-menu.html
@@ -1,4 +1,4 @@
-<div class="burger-menu" id="header-burger-menu" data-menu>
+<div class="burger-menu" id="header-burger-menu" data-fullscreen data-menu>
     <div class="burger-menu__header">
         <div class="header-consultation">
             <button class="header-consultation__button button button--dark" type="button" aria-controls="modal-consultation" data-graph-path="consultation">
