--- a/src/html/components/blocks/modals/_modal-template.html
+++ b/src/html/components/blocks/modals/_modal-template.html
@@ -1,5 +1,5 @@
 <div class="graph-modal__box">
-    <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
+    <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно" type="button"></button>
     <form class="graph-modal__form form" action="#">
         <div class="form__header">
             <span class="form__title">
