--- a/src/html/components/cards/_product-realize-card.html
+++ b/src/html/components/cards/_product-realize-card.html
@@ -14,7 +14,7 @@
             </span>
         </div>
         <div class="product-realize__actions">
-            <button class="product-realize__button button button--decor" type="button">
+            <button class="product-realize__button button button--decor" data-graph-path="order-project" aria-controls="modal-order-project" type="button">
                 Хочу похожий
                 <span class="button__decor">
                     <svg aria-hidden>
