--- a/src/html/components/blocks/_side-menu.html
+++ b/src/html/components/blocks/_side-menu.html
@@ -1,4 +1,4 @@
-<nav class="side-menu">
+<nav class="side-menu fixed-block ">
     <ul class="side-menu__items side-menu__items--arrows" data-color="dark">
         <li>
             <a class="side-menu__link" href="#">
