--- a/src/styles/components/blocks/header/burger/_burger-menu.scss
+++ b/src/styles/components/blocks/header/burger/_burger-menu.scss
@@ -24,7 +24,7 @@
 	&--active {
 		z-index: 20;
 		overflow-y: auto;
-		height: 100vh;
+		height: var(--vh);
 		opacity: 1;
 		visibility: visible;
 		transform: translateX(0);
