--- a/src/styles/components/cards/_facade-card.scss
+++ b/src/styles/components/cards/_facade-card.scss
@@ -9,6 +9,31 @@
 		padding: 5px 5px 140%;
 		width: 100%;
 
+		&:focus-visible {
+			outline: 0;
+
+			&::before {
+				border-color: var(--color-orange-400);
+			}
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				&::after {
+					opacity: 0.2;
+				}
+			}
+		}
+
+		&::after {
+			@include blackout;
+
+			right: 5px;
+			top: 5px;
+			width: calc(100% - 10px);
+			height: calc(100% - 10px);
+		}
+
 		&::before {
 			content: '';
 			position: absolute;
@@ -17,6 +42,7 @@
 			border: 1px solid var(--color-grey-200);
 			width: 100%;
 			height: 100%;
+			transition: border-color 0.3s;
 		}
 	}
 
