--- a/src/styles/pages/home-page/_hero.scss
+++ b/src/styles/pages/home-page/_hero.scss
@@ -21,7 +21,7 @@
 
 		position: relative;
 		display: flex;
-		min-height: 100vh;
+		min-height: var(--vh);
 		background-position: center top;
 
 		&::before {
@@ -45,7 +45,7 @@
 		position: relative;
 		z-index: 2;
 		margin-top: auto;
-		padding: 80px 250px 80px 300px;
+		padding: 96px 250px 80px 300px;
 		width: 100%;
 		height: 100%;
 		color: var(--color-white);
