--- a/src/html/components/cards/_product-card.html
+++ b/src/html/components/cards/_product-card.html
@@ -13,7 +13,7 @@
             </a>
             @if(question !== 'null') {
             <button class="product-card__question" type="button" data-tippy-content>
-                @question
+                <span>@question</span>
                 <svg aria-hidden>
                     <use xlink:href="img/sprite.svg#question">
                 </svg>
