--- a/src/styles/components/cards/_product-card.scss
+++ b/src/styles/components/cards/_product-card.scss
@@ -110,9 +110,23 @@
 	&__question {
 		@include question-button(5px);
 
+		span {
+			@include link-border-bottom;
+
+			padding-bottom: 2px;
+		}
+
+		svg {
+			transform: translateY(-2px);
+		}
+
 		@media (any-hover: hover) {
 			&:hover {
 				color: var(--color-dark-600);
+
+				span {
+					border-bottom-color: var(--color-grey-200);
+				}
 			}
 		}
 	}
