--- a/src/styles/pages/product-page/_other-solutions.scss
+++ b/src/styles/pages/product-page/_other-solutions.scss
@@ -1,52 +1,24 @@
 .other-solutions {
 	@include container;
 
-	&__wrapper {
-		position: relative;
-		overflow: hidden;
-	}
-
-	&__header {
-		@include flex-alignment(40px, space-between, flex-end);
-
-		margin-bottom: 36px;
-
-		@include mq(sm) {
-			margin-bottom: 20px;
+	.swiper-header {
+		&__title {
+			@include mq(xl, min) {
+				flex-basis: 20%;
+			}
 		}
-	}
 
-	&__title {
-		margin-bottom: 0;
-
-		@include mq(xl, min) {
-			flex-basis: 20%;
-		}
-	}
-
-	&__controls {
-		@include flex-alignment(15px, flex-start, center);
-
-		@include mq(md) {
-			display: none;
+		&__controls {
+			@include mq(lg) {
+				display: none;
+			}
 		}
 	}
 
 	&__items {
-		@include mq(md) {
+		@include mq(lg) {
 			margin-bottom: 20px;
 		}
-	}
-
-	&__swiper {
-		position: static;
-		overflow: visible;
-	}
-
-	&__buttons {
-		@include flex-simple(8px);
-
-		padding: 2px 0;
 	}
 
 	&__button {
