add focus and hover for burger-menu

--- a/src/html/components/blocks/header/_burger-menu.html
+++ b/src/html/components/blocks/header/_burger-menu.html
@@ -110,17 +110,17 @@
                 <li class="burger-banners__item burger-banners__item--small">
                     <div class="burger-banners__card burger-banners__card--light">
                         <span class="burger-banners__icon" style="background-image: url('img/icons/percent.svg');" aria-hidden></span>
-                        <span class="burger-banners__subtitle">
+                        <a class="burger-banners__link" href="#">
                             Акции и скидки
-                        </span>
+                        </a>
                     </div>
                 </li>
                 <li class="burger-banners__item burger-banners__item--small">
                     <div class="burger-banners__card burger-banners__card--dark">
                         <span class="burger-banners__icon" style="background-image: url('img/icons/marker.svg');" aria-hidden></span>
-                        <span class="burger-banners__subtitle">
+                        <a class="burger-banners__link" href="#">
                             Адреса салонов
-                        </span>
+                        </a>
                     </div>
                 </li>
                 <li class="burger-banners__item burger-banners__item--washes burger-banners__item--big">
