--- a/src/styles/components/cards/_banner-card.scss
+++ b/src/styles/components/cards/_banner-card.scss
@@ -47,8 +47,27 @@
 		@include title;
 		@include line-clamp(2);
 
+		transition: color 0.3s;
+
+		&:focus-visible {
+			outline: 0;
+
+			&::before {
+				box-shadow: var(--box-shadow-orange);
+			}
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--color-orange-400);
+			}
+		}
+
 		&::before {
 			@include link-cover;
+
+			border-radius: 20px;
+			transition: box-shadow 0.3s;
 		}
 
 		@include mq(sm) {
