--- a/src/styles/components/blocks/_menu-mobile.scss
+++ b/src/styles/components/blocks/_menu-mobile.scss
@@ -36,17 +36,23 @@
 			color 0.3s,
 			border-color 0.3s;
 
+		&:focus-visible {
+			outline: 0;
+			border-color: var(--color-orange-400);
+		}
+
+		@media (any-hover: hover) {
+			&:hover {
+				color: var(--color-orange-400);
+			}
+		}
+
 		@include mq(sm) {
 			padding: 9px;
 			font-weight: 500;
 			font-size: 10px;
 			line-height: 1.3;
 			letter-spacing: -0.04em;
-		}
-
-		&:focus-visible {
-			outline: 0;
-			border-color: var(--color-orange-400);
 		}
 
 		&--active {
